// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render with profile image 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-1px82g5"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="John Doe"
        class="h-20 w-20 rounded bg-cover bg-center bg-no-repeat object-cover"
        data-testid="ProfileAvatar__image"
        src="avatarImage"
        title="John Doe"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with svg 1`] = `
<DocumentFragment>
  <div
    class="shrink-0 css-1px82g5"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="John Doe"
        data-testid="ProfileAvatar__svg"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(233, 30, 99)" width="100" height="100"/><circle r="45" cx="80" cy="30" fill="rgb(76, 175, 80)"/><circle r="55" cx="0" cy="60" fill="rgb(255, 152, 0)"/><circle r="40" cx="50" cy="50" fill="rgb(3, 169, 244)"/></svg>"
        title="John Doe"
      />
      <span
        class="absolute font-semibold text-white"
      >
        JO
      </span>
    </div>
  </div>
</DocumentFragment>
`;
